syntax = "proto3";

import "google/api/annotations.proto";
import  "google/api/http.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-gorm/options/gorm.proto";
import "protoc-gen-gorm/types/types.proto";
option go_package = "./pb";

message UserORM {
  option (gorm.opts) = {
    ormable: true,
    table: "users"
  };

  uint64 id = 1 [(gorm.field).tag = {
    primary_key: true,
    not_null: true
  }];

  string username = 2 [(gorm.field).tag = {unique: true}];
  string email = 3 [(gorm.field).tag = {unique: true}];
  string password_hash = 4;
  string role = 5;
  bool is_active = 6;

  google.protobuf.Timestamp createdAt = 7 [
    (gorm.field).tag = {not_null: true}
  ];
  google.protobuf.Timestamp updatedAt = 8 [
    (gorm.field).tag = {not_null: true}
  ];
}